<resources>
    <string name="app_name">Online Courier Service</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_slideshow">Create Order</string>
    <string name="menu_parcel_list">Parcel List</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_my_order">My Purchase</string>


    <string-array name="product_type">
        <item>Box Packaging</item>
        <item>Glass Packaging</item>
    </string-array>
    <string-array name="payment_method">
        <item>Mobile Banking</item>
        <item>Cash On Delivery</item>
    </string-array>


    <string-array name="thana_array">
        <item>Select Thana</item>
    </string-array>


    <string-array name="city_array">
        <item>Select City</item>
        <item>Dhaka</item>
        <item>Chittagong</item>
        <item>Feni</item>
    </string-array>


    <string-array name="Dhaka">
        <item>Select Thana</item>
        <item>Mirpur</item>
        <item>Mohammadpur</item>
        <item>Khilgaon</item>
        <item>Tejgaon</item>
    </string-array>
    <string-array name="Chittagong">
        <item>Select Thana</item>
        <item>Agrabad</item>
        <item>Nasirabad</item>
        <item>Oxygen</item>
        <item>Raujan</item>
    </string-array>


    <string-array name="Mirpur">
        <item>Select Area</item>
        <item>Mirpur-1</item>
        <item>Mirpur-10</item>
    </string-array>
    <string-array name="Khilgaon">
        <item>Select Area</item>
        <item>Khilgaon</item>
        <item>Tilpa-para</item>
    </string-array>

    <string-array name="Nasirabad">
        <item>Select Area</item>
        <item>Nasirabad</item>
        <item>2 no. gate</item>
    </string-array>







</resources>