<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icons8_home_100px"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_create_order"
            android:icon="@drawable/icons8_purchase_order_100px"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_parcel_list"
            android:icon="@drawable/icons8_tasklist_100px"
            android:title="@string/menu_parcel_list" />
        <item
            android:id="@+id/nav_Shop"
            android:icon="@drawable/ic_baseline_shopping_basket_24"
            android:title="@string/menu_shop" />
        <item
            android:id="@+id/nav_my_order"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/menu_my_order" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/icons8_info_100px"
            android:title="@string/menu_faq" />
    </group>
</menu>