<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.target.onlinecourierservice.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_create_order"
        android:name="com.target.onlinecourierservice.ui.CreateOrder.CreateOrderFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_create_order" />
    <fragment
        android:id="@+id/nav_parcel_list"
        android:name="com.target.onlinecourierservice.ui.ParcelList.ParcelListFragment"
        android:label="@string/menu_parcel_list"
        tools:layout="@layout/fragment_parcel_list" />
    <fragment
        android:id="@+id/nav_Shop"
        android:name="com.target.onlinecourierservice.ui.Shop.ShopFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_shop" />
    <fragment
        android:id="@+id/nav_faq"
        android:name="com.target.onlinecourierservice.ui.faq.FaqFragment"
        android:label="@string/menu_faq"
        tools:layout="@layout/fragment_faq" />

</navigation>